--- a/index.html
+++ b/index.html
@@ -422,6 +422,10 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-title-form">Subscribe</p>
+          <form action=""></form>
+        </div>
       </div>
     </footer>
     <div class="modal-window is-hidden" data-modal>
