--- a/index.html
+++ b/index.html
@@ -422,9 +422,19 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
+        <div class="footer-form-section">
           <p class="footer-title-form">Subscribe</p>
-          <form action=""></form>
+          <form class="footer-form" action="">
+            <label class="footer-label" for="">
+              <input
+                class="footer-label-input"
+                name=""
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
       </div>
     </footer>
