--- a/index.html
+++ b/index.html
@@ -428,12 +428,14 @@
             <label class="footer-label" for="">
               <input
                 class="footer-label-input"
-                name=""
+                name="name"
                 type="email"
                 placeholder="E-mail"
               />
             </label>
-            <button type="submit">Subscribe</button>
+            <button class="footer-button-subscribe" type="submit">
+              Subscribe
+            </button>
           </form>
         </div>
       </div>
