--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
             </label>
             <button class="footer-button-subscribe" type="submit">
               Subscribe
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
             </button>
           </form>
         </div>
