--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </label>
             <button class="footer-button-subscribe" type="submit">
               Subscribe
-              <svg width="24" height="24">
+              <svg class="footer-button-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </button>
