--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <button class="footer-button-subscribe" type="submit">
               Subscribe
               <svg class="footer-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-clock-1"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </button>
           </form>
