--- a/portfolio.html
+++ b/portfolio.html
@@ -318,6 +318,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-section">
+          <p class="footer-title-form">Subscribe</p>
+          <form class="footer-form" action="">
+            <label class="footer-label" for="">
+              <input
+                class="footer-label-input"
+                name="name"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-button-subscribe" type="submit">
+              Subscribe
+              <svg class="footer-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="modal-window is-hidden" data-modal>
