--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,7 @@
             <button class="footer-button-subscribe" type="submit">
               Subscribe
               <svg class="footer-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-Frame-3-1"></use>
               </svg>
             </button>
           </form>
