--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <button class="footer-button-subscribe" type="submit">
               Subscribe
               <svg class="footer-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-Frame-3-1"></use>
               </svg>
             </button>
           </form>
@@ -447,7 +447,7 @@
       <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-VectorX"></use>
+            <use href="./images/icons.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
