--- a/index.html
+++ b/index.html
@@ -450,6 +450,13 @@
             <use href="./images/icons.svg#icon-Vector"></use>
           </svg>
         </button>
+        <p class="modal-text"></p>
+        <form>
+          <div class="modal-form-section">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div></div>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
