--- a/index.html
+++ b/index.html
@@ -447,14 +447,21 @@
       <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-Vector"></use>
+            <use href="./images/icons.svg#icon-VectorX"></use>
           </svg>
         </button>
         <p class="modal-text"></p>
         <form>
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Name</label>
-            <div></div>
+            <div class="modal-input-icon-section">
+              <input
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+            </div>
           </div>
         </form>
       </div>
