--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
                 name="user-name"
                 type="text"
               />
+              <svg class="modal-user-name-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
             </div>
           </div>
         </form>
