--- a/index.html
+++ b/index.html
@@ -466,6 +466,34 @@
               </svg>
             </div>
           </div>
+          <div class="modal-form-section">
+            <label class="modal-form-label" for="user-name">Phone</label>
+            <div class="modal-input-icon-section">
+              <input
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="modal-user-name-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-pfone-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-section">
+            <label class="modal-form-label" for="user-name">Email</label>
+            <div class="modal-input-icon-section">
+              <input
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="modal-user-name-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail-1"></use>
+              </svg>
+            </div>
+          </div>
         </form>
       </div>
     </div>
