--- a/index.html
+++ b/index.html
@@ -494,6 +494,17 @@
               </svg>
             </div>
           </div>
+          <div class="modal-textarea-section">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="model-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
         </form>
       </div>
     </div>
