--- a/index.html
+++ b/index.html
@@ -505,6 +505,18 @@
               rows="10"
             ></textarea>
           </div>
+          <div class="modal-check-section">
+            <input
+              class="modal-input-check visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="modal-check-label" for="user-privacy"
+              >I accept the terms and conditions of the</label
+            >
+          </div>
         </form>
       </div>
     </div>
