--- a/index.html
+++ b/index.html
@@ -514,8 +514,12 @@
               name="user-privacy"
             />
             <label class="modal-check-label" for="user-privacy"
-              >I accept the terms and conditions of the</label
-            >
+              ><span class="modal-label-span"
+                ><svg width="10" height="8">
+                  <use
+                    href="./images/icons.svg#icon-Vector"
+                  ></use></svg></span></label
+            >I accept the terms and conditions of the
           </div>
         </form>
       </div>
