--- a/index.html
+++ b/index.html
@@ -515,11 +515,10 @@
             />
             <label class="modal-check-label" for="user-privacy"
               ><span class="modal-label-span"
-                ><svg width="10" height="8">
-                  <use
-                    href="./images/icons.svg#icon-Vector"
-                  ></use></svg></span></label
-            >I accept the terms and conditions of the
+                ><svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use></svg></span
+              >I accept the terms and conditions of the</label
+            >
           </div>
         </form>
       </div>
