--- a/index.html
+++ b/index.html
@@ -517,9 +517,11 @@
               ><span class="modal-label-span"
                 ><svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use></svg></span
-              >I accept the terms and conditions of the</label
-            >
+              >I accept the terms and conditions of the
+              <a class="privacy-link link" href="">Privacy Policy</a>
+            </label>
           </div>
+          <button class="modal-button-send" type="button">Send</button>
         </form>
       </div>
     </div>
