--- a/index.html
+++ b/index.html
@@ -424,14 +424,9 @@
         </div>
         <div class="footer-form-section">
           <p class="footer-title-form">Subscribe</p>
-          <form class="footer-form" action="">
-            <label class="footer-label" for="">
-              <input
-                class="footer-label-input"
-                name="name"
-                type="email"
-                placeholder="E-mail"
-              />
+          <form class="footer-form">
+            <label class="footer-label">
+              <input class="footer-label-input" name="name" type="email" placeholder="E-mail"/>
             </label>
             <button class="footer-button-subscribe" type="submit">
               Subscribe
@@ -469,12 +464,8 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Phone</label>
             <div class="modal-input-icon-section">
-              <input
-                class="modal-input"
-                id="user-name"
-                name="user-name"
-                type="text"
-              />
+              <input class="modal-input" name="user-name" type="text"/>
+              
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-pfone-1"></use>
               </svg>
@@ -483,12 +474,7 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Email</label>
             <div class="modal-input-icon-section">
-              <input
-                class="modal-input"
-                id="user-name"
-                name="user-name"
-                type="text"
-              />
+              <input class="modal-input" name="user-name" type="text"/>
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail-1"></use>
               </svg>
@@ -496,14 +482,7 @@
           </div>
           <div class="modal-textarea-section">
             <label class="modal-form-label" for="user-comment">Comment</label>
-            <textarea
-              class="model-textarea"
-              name="user-comment"
-              id="user-comment"
-              placeholder="Text input"
-              cols="30"
-              rows="10"
-            ></textarea>
+            <textarea class="model-textarea" name="user-comment" id="user-comment" placeholder="Text input" cols="30" rows="10"></textarea>
           </div>
           <div class="modal-check-section">
             <input
