--- a/portfolio.html
+++ b/portfolio.html
@@ -320,14 +320,9 @@
         </div>
         <div class="footer-form-section">
           <p class="footer-title-form">Subscribe</p>
-          <form class="footer-form" action="">
-            <label class="footer-label" for="">
-              <input
-                class="footer-label-input"
-                name="name"
-                type="email"
-                placeholder="E-mail"
-              />
+          <form class="footer-form">
+            <label class="footer-label">
+              <input class="footer-label-input" name="name" type="email" placeholder="E-mail"/>
             </label>
             <button class="footer-button-subscribe" type="submit">
               Subscribe
