--- a/index.html
+++ b/index.html
@@ -450,12 +450,7 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-input-icon-section">
-              <input
-                class="modal-input"
-                id="user-name"
-                name="user-name"
-                type="text"
-              />
+              <input class="modal-input" name="user-name" type="text"/>
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -485,13 +480,7 @@
             <textarea class="model-textarea" name="user-comment" id="user-comment" placeholder="Text input" cols="30" rows="10"></textarea>
           </div>
           <div class="modal-check-section">
-            <input
-              class="modal-input-check visually-hidden"
-              type="checkbox"
-              id="user-privacy"
-              value="true"
-              name="user-privacy"
-            />
+            <input class="modal-input-check visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy"/>
             <label class="modal-check-label" for="user-privacy"
               ><span class="modal-label-span"
                 ><svg class="check-icon" width="10" height="8">
