--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <use href="./images/icons.svg#icon-VectorX"></use>
           </svg>
         </button>
-        <p class="modal-text"></p>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
         <form>
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Name</label>
