--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-input-icon-section">
-              <input class="modal-input" name="Name" id="user-name" type="text"/>
+              <input class="modal-input" name="user-name" id="user-name" type="text"/>
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -459,7 +459,7 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Phone</label>
             <div class="modal-input-icon-section">
-              <input class="modal-input" name="Phone" id="user-name" type="text"/>
+              <input class="modal-input" name="user-name" id="Phone" type="text"/>
               
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-pfone-1"></use>
@@ -469,7 +469,7 @@
           <div class="modal-form-section">
             <label class="modal-form-label" for="user-name">Email</label>
             <div class="modal-input-icon-section">
-              <input class="modal-input" name="Email" id="user-name" type="text"/>
+              <input class="modal-input" name="user-name" id="Email" type="text"/>
               <svg class="modal-user-name-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail-1"></use>
               </svg>
